<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first_main_device"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="48dp"
        android:orientation="vertical">


        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="0dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/top_view"
            android:orientation="vertical">


            <com.lgh.huanglib.util.cusview.CustomViewPager
                android:id="@+id/my_pager"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tab_bar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/hsv_content"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/item_height50"
            android:background="@color/white"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lin_1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/selector_btn_home"
                    android:gravity="center"
                    android:text="@string/tab_home"
                    android:textColor="@color/tab_text_selector"
                    android:textSize="@dimen/text_size10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/selector_btn_message"
                    android:gravity="center"
                    android:text="@string/tab_message"
                    android:textColor="@color/tab_text_selector"
                    android:textSize="@dimen/text_size10" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/lin_3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/selector_btn_physicianvisits"
                    android:gravity="center"
                    android:text="@string/tab_physicianvisits"
                    android:textColor="@color/tab_text_selector"
                    android:textSize="@dimen/text_size10" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lin_4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/selector_btn_mine"
                    android:gravity="center"
                    android:text="@string/tab_mine"
                    android:textColor="@color/tab_text_selector"
                    android:textSize="@dimen/text_size10" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>